Z-index fix

--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,8 @@
     position: absolute;
     width: 80%;
     top: 20%;
-    left: 10%
+    left: 10%;
+    z-index: 1000;
 }
 #white-doggo {
     position: absolute;
